# risajef.github.io

./: .gitattributes  .gitignore  .gitmodules  404.html  ARCHITECTURE.md  CNAME  Christentum für Atheisten.html  Kritik am Konsequentialismus.html  Kritik an der Logik.html  README.md  Religion als DNA einer Gesellschaft.html  christentum_für_atheisten.html  cite_style.csl  css_gen.py  das_böse.html  ethik_stabilität.html  evolutions_beispiel.html  exkurs_gut.html  exkurs_moral.html  feed-updated.json  feed.json  fix_snippet_includes.py  glauben.html  gott_der_zwangsarbeiter.html  graph.dot  html_gen.py  index.html  index.mm  index.php  index.py  index_raw  kritik_am_konsequentialismus.html  kritik_an_der_logik.html  kurze_geschichte_der_götter.html  links.txt  llm.txt  make_graph.py  make_index.py  make_ready_for_vc.py  make_tree.py  (+38 more)
.codex/: add-tool-workflow.md
.github/workflows/: dependency-audit.yml  deploy-pages.yml  simpleanalytics-daily.yml
assets/: background-generator-embed.js  buchfalten-embed.js  language-switcher.css  parallelismus-embed.js  rss-feed.css  rss-feed.js
assets/background-generator/: index.html  package-lock.json  package.json  tsconfig.web.json
assets/buchfalten/: app.js  config.js  index.html  main.js  styles.css
assets/csv-editor/: app.js  styles.css
assets/diabetes_gui/: app.js  index.html  styles.css
assets/hoare/: script.js  style.css
assets/hoare-logic/: LICENSE  embed-derivation-tree.html  package-lock.json  package.json
assets/hoare-logic-dist/: index.html
assets/linkedin-wysiwyg/: app.js
assets/parallelismus/: build.js  package-lock.json  package.json
assets/python-blocks/: package-lock.json  package.json  playwright.config.js  stress_test.py
assets/python-blocks-dist/: index.html
assets/reverse-chart/: app.js  index.html  styles.css
assets/theme/: risajef-theme.css
assets/xml-weaver/: LICENSE  index.html  package-lock.json  package.json  tsconfig.json
assets/xml-weaver-dist/: index.html
blog/: index.html
blog/opinions/: index.html
blog/philosophy/: index.html
blog/science/: index.html
blog/thoughts/: index.html
book/: index.html
book/influential-books/: index.html
book/lessons-from-my-book/: index.html
book/the-book/: index.html
book/waermer-als-die-sonne/: index.html
cv/: index.html
de/: index.html
de/blog/: index.html
de/book/: index.html
de/cv/: index.html
de/index/: index.html
de/politik/: index.html
de/programming/: index.html
de/research/: index.html
de/tools/: index.html
docs/: CNAME  blog.de.md  blog.en.md  blog.md  book.de.md  book.en.md  book.md  cv.de.md  cv.en.md  index.de.md  index.en.md  index.md  politics.md  politik.de.md  politik.en.md  politik.md  programming.de.md  programming.en.md  programming.md  research.de.md  research.en.md  research.md  robots.txt  tools.de.md  tools.en.md
docs/assets/: buchfalten-embed.js  language-switcher.js  parallelismus-embed.js
docs/blog/: opinions.md  philosophy.de.md  philosophy.en.md  philosophy.md  science.de.md  science.en.md  science.md  thoughts.de.md  thoughts.en.md  thoughts.md
docs/book/: influential-books.de.md  influential-books.en.md  influential-books.md  lessons-from-my-book.de.md  lessons-from-my-book.en.md  lessons-from-my-book.md  the-book.de.md  the-book.en.md  the-book.md  waermer-als-die-sonne.de.md  waermer-als-die-sonne.en.md  wärmer-als-die-sonne.de.md
docs/politics/: e-id.md  finanzen-beringen.md  zonenplanaenderung.md
docs/politik/: e-id.de.md  e-id.en.md  e-id.md  finanzen-beringen.de.md  finanzen-beringen.en.md  (+7 more)
eid/: index.html
hooks/: auto_snippets.py
mkdocs_piper_tts/: __init__.py  plugin.py
paper1/: index.html
plugins/: README.md  multilingual_plugin.py  setup.py
politics/: index.html
politik/: index.html
programming/: index.html
research/: index.html
scripts/: auto_translate.py  build_tools.py  check_site.py  deploy.py  finalize_site.py  publish_runtime_assets.py  runtime_assets.py
search/: search_index.json
tests/: test_language_outputs.py  test_politik_redirect.py
theme/: main.html  make_favicon.py  style.css
tools/: index.html
z3/: z3-worker.js
(+1043 files in other folders)
