[project]
name = "risajef-github-io"
version = "1.0.0"
description = "Personal MkDocs site for retoweber.info"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-bibtex==4.4.0",
  "mkdocs-exclude==1.0.2",
  "mkdocs-inline-select-svg-plugin==0.1.0",
  "mkdocs-mermaid-to-svg==1.0.3",
  "mkdocs-static-i18n==1.3.0",
  "python-markdown-math==0.9",
  "mkdocs-rss-plugin==1.17.7",
  "pymdown-extensions==10.8.1",
  "piper-tts==1.2.0",
  "onnx>=1.16,<2",
  "onnxruntime-gpu[cuda,cudnn]==1.25.0; python_version >= '3.11'",
  "tensorrt-cu12>=10.9,<11; python_version >= '3.11'",
]

[project.entry-points."mkdocs.plugins"]
piper-tts = "mkdocs_piper_tts.plugin:PiperTTSPlugin"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mkdocs_piper_tts*"]

[dependency-groups]
translate = [
  "argostranslate==1.9.6",
]

[tool.uv]
package = true
dependency-metadata = [
  { name = "piper-tts", version = "1.2.0", requires-dist = [
    "piper-phonemize~=1.1.0",
    "onnxruntime-gpu[cuda,cudnn]==1.25.0",
  ] },
]
