[project]
name = "risajef-github-io"
version = "1.0.0"
description = "Personal MkDocs site for retoweber.info"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "beautifulsoup4==4.15.0",
  "lxml==6.1.1",
  "mkdocs==1.6.1",
  "mkdocs-bibtex==4.4.0",
  "mkdocs-exclude==1.0.2",
  "mkdocs-mermaid-to-svg==1.0.3",
  "mkdocs-piper-tts[cuda]==0.2.2",
  "mkdocs-static-i18n==1.3.0",
  "python-markdown-math==0.9",
  "mkdocs-rss-plugin==1.17.7",
  "pymdown-extensions==10.21.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2.0",
    "pyink>=24.8,<25.0",
    "pylint>=3.2,<4.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[tool.pyink]
line-length = 128
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = "src tests"
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true
namespace_packages = true
plugins = []


[tool.uv]
package = false
dependency-metadata = [
  { name = "piper-tts", version = "1.2.0", requires-dist = [
    "piper-phonemize~=1.1.0",
    "onnxruntime-gpu[cuda,cudnn]==1.25.0",
  ] },
]

[tool.uv.sources]
mkdocs-piper-tts = { path = "mkdocs_piper_tts", editable = true }
